Update from https://github.com/dominikzorgnotti/transform-vmware-product-builds-to-json/commit/863afdd870818678830e90f41b8d704a67b610ba

--- a/records/kb2143832_vmware_vsphere_esxi_table0_release_as-records.json
+++ b/records/kb2143832_vmware_vsphere_esxi_table0_release_as-records.json
@@ -1,5 +1,12 @@
 [
     {
+        "Version":"ESXi 7.0 Update 2a",
+        "Release Name":"ESXi 7.0 Update 2a",
+        "Release Date":"2021-04-29T00:00:00.000Z",
+        "Build Number":"17867351",
+        "Installer Build Number":null
+    },
+    {
         "Version":"ESXi 7.0 Update 2",
         "Release Name":"ESXi 7.0 Update 2",
         "Release Date":"2021-03-09T00:00:00.000Z",
