--- a/index/kb2143832_vmware_vsphere_esxi_table0_release_as-index.json
+++ b/index/kb2143832_vmware_vsphere_esxi_table0_release_as-index.json
@@ -1,4 +1,10 @@
 {
+    "17867351":{
+        "Version":"ESXi 7.0 Update 2a",
+        "Release Name":"ESXi 7.0 Update 2a",
+        "Release Date":"2021-04-29T00:00:00.000Z",
+        "Installer Build Number":null
+    },
     "17630552":{
         "Version":"ESXi 7.0 Update 2",
         "Release Name":"ESXi 7.0 Update 2",
