--- a/records/kb2143850_vmware_vrealize_automation_table0_release_as-records.json
+++ b/records/kb2143850_vmware_vrealize_automation_table0_release_as-records.json
@@ -1,5 +1,21 @@
 [
     {
+        "Product Release":"vRealize Automation 8.4.1",
+        "Release Date":null,
+        "Build Number -\u00a0Version":"TBA",
+        "Installer Build Number":"TBA",
+        "Build Number":"TBA",
+        "Version":null
+    },
+    {
+        "Product Release":"vRealize Automation 8.4",
+        "Release Date":"2021-04-15T00:00:00.000Z",
+        "Build Number -\u00a0Version":"17874359 - 8.4.0.16324",
+        "Installer Build Number":"17879649 - 1.0.0.842",
+        "Build Number":"17874359",
+        "Version":"8.4.0.16324"
+    },
+    {
         "Product Release":"vRealize Automation 8.3 P1",
         "Release Date":"2021-03-16T00:00:00.000Z",
         "Build Number -\u00a0Version":"17746788 - 8.3.0.15127",
